[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zpa_demo"
authors = [
    {name = "ZestyAI @Product Analytics", email = "philippe@zesty.ai"},
]
description = "A short description of the product analytics project."
dynamic = ["version", "readme"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "autoreload>=0.1.2",
    "colorlog>=6.10.1",
    "graphviz>=0.21",
    "ipython>=9.9.0",
    "ipywidgets>=8.1.8",
    "jupyter-black>=0.4.0",
    "linearmodels>=7.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "preliz>=0.24.0",
    "pymc>=5.27.0",
    "pyyaml>=6.0.3",
    "ruff>=0.6.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "watermark>=2.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["zpa_demo*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "zpa_demo.version.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # bugbear
    "B",
    # naming
    "N",
    # logging
    "G",
    # simplify
    "SIM",
    # ruff
    "RUF",
    # mccabe
    "C90",
    # isort
    "I",
    # bandit
    "S"
]
ignore = ["E501", "S101"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
known-first-party = ["commons", "helpers", "zpa_demo"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "internal",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
"internal" = []

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.4",
]
